package Model.Boat;

/** Représente un porte-avions. */
public class AircraftCarrier extends AbstractBoat {

    /** Crée un porte-avions. */
    public AircraftCarrier() {
        super(BoatType.AIRCRAFT_CARRIER);
    }
}
