package Model.Boat;

/** Représente un croiseur. */
public class Cruiser extends AbstractBoat {

    /** Crée un croiseur. */
    public Cruiser() {
        super(BoatType.CRUISER);
    }
}
