package Model.Boat;

/** Représente un contre-torpilleur. */
public class Destroyer extends AbstractBoat {

    /** Crée un contre-torpilleur. */
    public Destroyer() {
        super(BoatType.DESTROYER);
    }
}
