package Model.Boat;

/** Représente un torpilleur. */
public class TorpedoBoat extends AbstractBoat {

    /** Crée un torpilleur. */
    public TorpedoBoat() {
        super(BoatType.TORPEDO);
    }
}
